--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,11 +1,11 @@
 .modal {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  max-width: 1280px;
-  width: 100%;
-  height: 100%;
   display: none;
   top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
   align-items: center;
   justify-content: center;
 }
