--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,9 +1,20 @@
 .page {
   background-color: #000000;
-  display: flex;
-  margin: auto;
-  flex-direction: column;
-  align-items: center;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
+  color: #fff;
+  max-width: 880px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 950px) {
+  .page {
+    max-width: 660px;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .page {
+    max-width: 320px;
+  }
 }
