--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,21 @@
 /*Page*/
 @import url(../blocks/page/page.css);
 
+/*Header*/
+@import url(../blocks/header/header.css);
+@import url(../blocks/header/__logo/header__logo.css);
+
+/*Content*/
+@import url(../blocks/content/content.css);
+
+/*Profile*/
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__image/profile__image.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__info/profile__info.css);
+@import url(../blocks/profile/__edit-button/profile__edit-button.css);
+@import url(../blocks/profile/__description/profile__description.css);
+
 /*Modal*/
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/__container/modal__container.css);
