add correct font style

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   background-color: #000000;
-  font-family: "Inter", Arial, sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   color: #fff;
   max-width: 880px;
