--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,10 @@
 @import url(../blocks/cards/__element/__title/cards__element__title.css);
 @import url(../blocks/cards/__element/__like-button/cards__element__like-button.css);
 
+/*Footer*/
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+
 /*Modal*/
 @import url(../blocks/modal/modal.css);
 @import url(../blocks/modal/__container/modal__container.css);
