--- a/pages/index.css
+++ b/pages/index.css
@@ -23,10 +23,12 @@
 /*Cards*/
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__list/cards__list.css);
-@import url(../blocks/cards/__element/cards_element.css);
-@import url(../blocks/cards/__element/__image/cards__element__image.css);
-@import url(../blocks/cards/__element/__title/cards__element__title.css);
-@import url(../blocks/cards/__element/__like-button/cards__element__like-button.css);
+
+/*Card*/
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like-button/card__like-button.css);
 
 /*Footer*/
 @import url(../blocks/footer/footer.css);
