--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,4 +1,4 @@
-.cards__element__like-button {
+.card__like-button {
   margin-right: 30px;
   background-image: url(../../../../images/Likebutton.svg);
   background-position: center;
@@ -8,7 +8,8 @@
   background-color: white;
   padding: 0;
 }
-.cards__element__like-button:hover {
+
+.card__like-button:hover {
   opacity: 0.5;
   cursor: pointer;
 }
