--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -4,13 +4,13 @@
   font-size: 18px;
   line-height: 22px;
   margin: 0;
+  text-overflow: ellipsis;
   overflow: hidden;
   max-width: 415px;
 }
 
 @media screen and (max-width: 680px) {
   .profile__description {
-    font-weight: 400;
     font-size: 14px;
     line-height: 17px;
     text-align: center;
