--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,6 +1,6 @@
 .card__like-button {
   margin-right: 30px;
-  background-image: url(../../../../images/Likebutton.svg);
+  background-image: url(../../../images/Likebutton.svg);
   background-position: center;
   background-repeat: no-repeat;
   min-width: 21px;
