2nd revision updates

--- a/blocks/modal/modal.css
+++ b/blocks/modal/modal.css
@@ -1,7 +1,11 @@
 .modal {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
-  display: none;
+  display: flex;
+  visibility: none;
+  opacity: 0;
+  pointer-events: none;
+  transition: visibility 0s 0.5s, opacity 0.5s linear;
   top: 0;
   left: 0;
   bottom: 0;
@@ -11,5 +15,10 @@
 }
 
 .modal_opened {
+  position: fixed;
+  visibility: visible;
+  opacity: 1;
+  pointer-events: all;
+  transition: visibility 0s, opacity 0.5s linear;
   display: flex;
 }
