implementation of preview modal

--- a/pages/index.css
+++ b/pages/index.css
@@ -38,10 +38,19 @@
 
 /*Modal*/
 @import url(../blocks/modal/modal.css);
-@import url(../blocks/modal/__container/modal__container.css);
+
+/*Form Modal*/
+@import url(../blocks/modal/__container-form/modal__container-form.css);
 @import url(../blocks/modal/__form/modal__form.css);
 @import url(../blocks/modal/__form/__title/modal__form__title.css);
 @import url(../blocks/modal/__form/__exit-button/modal__exit-button.css);
 @import url(../blocks/modal/__form/__exit-icon/modal__form__exit-icon.css);
 @import url(../blocks/modal/__form/__input/modal__form__input.css);
 @import url(../blocks/modal/__form/__button/modal__form__button.css);
+
+/*Preview Modal*/
+@import url(../blocks/modal/__container-preview/modal__container-preview.css);
+@import url(../blocks/modal/__preview/modal__preview.css);
+@import url(../blocks/modal/__preview/__image/modal__preview-image.css);
+@import url(../blocks/modal/__preview/__caption/modal__preview-caption.css);
+@import url(../blocks/modal/__preview/__exit-button/modal__preview__exit-button.css);
