--- a/pages/index.css
+++ b/pages/index.css
@@ -23,14 +23,13 @@
 /*Cards*/
 @import url(../blocks/cards/cards.css);
 @import url(../blocks/cards/__list/cards__list.css);
-
-/*Card*/
-@import url(../blocks/card/card.css);
-@import url(../blocks/card/__image/card__image.css);
-@import url(../blocks/card/__delete-button/card__delete-button.css);
-@import url(../blocks/card/__description/card__description.css);
-@import url(../blocks/card/__description/__title/card__title.css);
-@import url(../blocks/card/__description/__like-button/card__like-button.css);
+@import url(../blocks/cards/__element/cards__element.css);
+@import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__delete-button/cards__delete-button.css);
+@import url(../blocks/cards/__description/cards__description.css);
+@import url(../blocks/cards/__like-button/cards__like-button.css);
+@import url(../blocks/cards/__like-button/_is-active/cards__like-button_is-active.css);
+@import url(../blocks/cards/__title/cards__title.css);
 
 /*Footer*/
 @import url(../blocks/footer/footer.css);
@@ -40,17 +39,17 @@
 @import url(../blocks/modal/modal.css);
 
 /*Form Modal*/
-@import url(../blocks/modal/__container/modal__container.css);
-@import url(../blocks/modal/__form/modal__form.css);
-@import url(../blocks/modal/__form/__title/modal__form__title.css);
-@import url(../blocks/modal/__form/__exit-button/modal__exit-button.css);
-@import url(../blocks/modal/__form/__exit-icon/modal__form__exit-icon.css);
-@import url(../blocks/modal/__form/__input/modal__form__input.css);
-@import url(../blocks/modal/__form/__button/modal__form__button.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__container/form__container.css);
+@import url(../blocks/form/__exit-button/form__exit-button.css);
+@import url(../blocks/form/__exit-icon/form__exit-icon.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__submit-button/form__submit-button.css);
+@import url(../blocks/form/__title/form__title.css);
 
 /*Preview Modal*/
-@import url(../blocks/modal/__wrapper/modal__wrapper.css);
-@import url(../blocks/modal/__preview/modal__preview.css);
-@import url(../blocks/modal/__preview/__image/modal__preview-image.css);
-@import url(../blocks/modal/__preview/__caption/modal__preview-caption.css);
-@import url(../blocks/modal/__preview/__exit-button/modal__preview__exit-button.css);
+@import url(../blocks/preview/preview.css);
+@import url(../blocks/preview/__caption/preview__caption.css);
+@import url(../blocks/preview/__container/preview__container.css);
+@import url(../blocks/preview/__exit-button/preview__exit-button.css);
+@import url(../blocks/preview/__image/preview__image.css);
