fix like button img path

--- a/blocks/cards/__like-button/cards__like-button.css
+++ b/blocks/cards/__like-button/cards__like-button.css
@@ -1,6 +1,6 @@
 .cards__like-button {
   margin-right: 20px;
-  background-image: url(../../../../images/Likebutton.svg);
+  background-image: url(../../../images/Likebutton.svg);
   background-position: center;
   background-repeat: no-repeat;
   min-width: 21px;
