fix close icon img path

--- a/blocks/preview/__exit-button/preview__exit-button.css
+++ b/blocks/preview/__exit-button/preview__exit-button.css
@@ -3,7 +3,7 @@
   margin-bottom: 370px;
   margin-left: 465px;
   background-color: transparent;
-  background-image: url(../../../../images/close-icon.svg);
+  background-image: url(../../../images/close-icon.svg);
   background-repeat: no-repeat;
   background-position: center;
   width: 40px;
