CSS & JS Refactor

--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -2,3 +2,16 @@
   display: flex;
   justify-content: center;
 }
+
+@media screen and (max-width: 880px) {
+  .cards {
+    width: 582px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .cards {
+    width: 282px;
+  }
+}
