--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,16 +8,39 @@
   background-position: center center;
   background-color: transparent;
   cursor: pointer;
+  margin: 28px 0 0 18px;
 }
 
 .profile__edit-button:hover {
   opacity: 0.6;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 880px) {
+  .profile__edit-button {
+    margin-right: 0;
+    margin-top: 14px;
+    margin-left: 8px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .profile__edit-button {
+    margin-right: 34px;
+    margin-bottom: 0;
+    margin-left: 0;
+    width: 18px;
+    height: 18px;
+    background-size: 7.5px 7.49px;
+    padding: 5.05px 5.25px 5.46px 5.25px;
+  }
+}
+
+@media screen and (max-width: 320px) {
   .profile__edit-button {
     background-size: 7.5px 7.5px;
     width: 18px;
     height: 18px;
+    padding: 5.05px 5.25px 5.46px 5.25px;
+    margin: 0 34px 16px 0;
   }
 }
