--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -5,8 +5,7 @@
   gap: 20px 17px;
   max-width: 880px;
   padding: 0;
-  margin-top: 47px;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 880px) {
