--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -2,10 +2,25 @@
   margin: 45px auto 41px;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 880px) {
   .header__logo {
-    margin-left: 27px;
+    margin-left: 25px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .header__logo {
     width: 126px;
-    margin-bottom: 32px;
+    margin: 28px 0 32px 27px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .header__logo {
+    width: 126px;
+    height: 24px;
+    padding-left: 27px;
+    padding-top: 28px;
+    margin: 0 0 32px 0;
   }
 }
