--- a/blocks/preview/__image/preview__image.css
+++ b/blocks/preview/__image/preview__image.css
@@ -2,3 +2,10 @@
   max-width: 100%;
   max-height: 540px;
 }
+
+@media screen and (max-width: 580px) {
+  .preview__image {
+    max-width: 75vw;
+    max-height: 75vh;
+  }
+}
