--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,5 +1,5 @@
 .profile__add-button {
-  margin-left: auto;
+  margin: 0 0 58px auto;
   background-color: transparent;
   background-image: url(../../../images/Addbutton.svg);
   background-position: center center;
@@ -16,18 +16,34 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 880px) {
   .profile__add-button {
-    max-width: 60px;
-    margin-left: 40px;
+    margin-right: 25px;
+    margin-bottom: 65px;
+    width: 130px;
+    height: 40px;
   }
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 628px) {
   .profile__add-button {
-    width: 100%;
-    max-width: 282px;
-    margin: 36px 0;
-    background-size: 16px 16px;
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .profile__add-button {
+    width: 282px;
+    height: 50px;
+    margin-bottom: 36px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__add-button {
+    width: 282px;
+    height: 50px;
+    margin: 0 19px 36px 19px;
   }
 }
