--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -2,17 +2,37 @@
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
-  line-height: 22px;
-  margin: 0;
+  line-height: 1.2;
+  margin: 16px 0 72px 0;
   text-overflow: ellipsis;
   overflow: hidden;
   max-width: 415px;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 880px) {
   .profile__description {
     font-size: 14px;
-    line-height: 17px;
-    text-align: center;
+    margin-top: 0;
+    margin: 12px 0 90px 0;
+    max-width: 100px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .profile__description {
+    max-width: 60px;
+    font-size: 14px;
+    margin-bottom: 36px;
+    margin-top: 14px;
+    margin-left: 135px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__description {
+    font-size: 14px;
+    margin: 0 0 0 135px;
+    padding-bottom: 36px;
+    max-width: 70px;
   }
 }
