--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -2,11 +2,23 @@
   border-radius: 50%;
   width: 120px;
   height: 120px;
-  margin-right: 30px;
+  margin: 0 30px 51px 0;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 880px) {
   .profile__image {
-    margin: 38px 0 26px 0;
+    margin-left: 25px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .profile__image {
+    margin: 42px auto 30px auto;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__image {
+    margin: 42px 99px 30px 101px;
   }
 }
