--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -2,17 +2,41 @@
   font-style: normal;
   font-weight: 500;
   font-size: 42px;
-  line-height: 48px;
-  margin: 0;
+  line-height: 1.1;
+  margin: 23px 0 0 0;
   grid-area: name;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
+  max-width: 373px;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (max-width: 880px) {
+  .profile__title {
+    font-size: 26px;
+    margin-top: 15px;
+  }
+}
+
+@media screen and (max-width: 628px) {
   .profile__title {
     font-size: 22px;
-    line-height: 27px;
+  }
+}
+
+@media screen and (min-width: 321px) and (max-width: 580px) {
+  .profile__title {
+    margin-left: 62px;
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__title {
+    font-size: 22px;
+    max-width: 200px;
+    margin-top: 0;
+    padding-bottom: 14px;
+    padding-left: 62px;
   }
 }
