--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,13 +1,19 @@
 .profile {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  margin-top: 40px;
+  padding-top: 40px;
 }
 
-@media screen and (max-width: 680px) {
+@media screen and (min-width: 321px) and (max-width: 580px) {
   .profile {
     flex-direction: column;
-    margin-top: 0;
+    padding-top: 0;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile {
+    flex-direction: column;
+    padding-top: 0px;
   }
 }
