--- a/pages/index.css
+++ b/pages/index.css
@@ -37,6 +37,7 @@
 
 /*Modal*/
 @import url(../blocks/modal/modal.css);
+@import url(../blocks/modal/_opened/modal_opened.css);
 
 /*Form Modal*/
 @import url(../blocks/form/form.css);
